--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="description" content="Meta Description">
     <link href="https://fonts.googleapis.com/css?family=Muli:400,700&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <!-- <link rel="stylesheet" href="css/styles.min.css"> -->
     <link rel="stylesheet" href="css/styles.css">
-    <title></title>
+    <title>Title</title>
 </head>
 <body>
     <header class="flex">
@@ -17,13 +19,13 @@
         <nav>
             <ul>
                 <li>
-                    <a href="#about-me">About me</a>
+                    <a href="#about-me">nav</a>
                 </li>
                 <li>
-                    <a href="#projects">Projects</a>
+                    <a href="#projects">nav</a>
                 </li>
                 <li>
-                    <a href="">Contact</a>
+                    <a href="">nav</a>
                 </li>
             </ul>
         </nav>
@@ -32,10 +34,10 @@
     <main class="container">
         <section class="heading">
             <h1>
-                Jon Brentnall
+                Title
             </h1>
             <h2>
-                Front end web developer
+                Sub Title
             </h2>
         </section>
 
@@ -91,9 +93,8 @@
         </section>
     </main>
 
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/trianglify/2.0.0/trianglify.min.js"></script> -->
-    <!-- <script src="js/particles.js"></script> -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script src="js/scripts.js"></script>
+    <!-- <script src="js/scripts.min.js"></script> -->
+    <script src="js/scripts.min.js"></script>
 </body>
 </html>
