--- a/hover-effects.html
+++ b/hover-effects.html
@@ -3,4 +3,4 @@
                         'e' + '&' + '#' + '1' + '1' + '0' + ';' + 't' + 'n' + '%' + '6' + '1' + 'l' + 'l' + '&' + '#' + '6' + '4' + ';' + 'o' + 'u' + 't' + 'l' + '&' + '#' +
                         '1' + '1' + '1' + ';' + 'o' + 'k' + '%' + '2' + 'E' + 'c' + 'o' + 'm' + "'" + '>' + 'j' + 'o' + 'n' + 'b' + 'r' + 'e' + 'n' + 't' + 'n' + 'a' + '&' +
                         '#' + '1' + '0' + '8' + ';' + 'l' + '&' + '#' + '6' + '4' + ';' + 'o' + 'u' + 't' + '&' + '#' + '1' + '0' + '8' + ';' + '&' + '#' + '1' + '1' + '1' +
-                        ';' + 'o' + '&' + '#' + '1' + '0' + '7' + ';' + '&' + '#' + '4' + '6' + ';' + 'c' + 'o' + 'm' + '<' + '/' + 'a' + '>');</script><noscript>Turn on JavaScript to see my email</noscript></button></footer></main><script src="js/swup.js" charset="utf-8"></script><script>var swup = new Swup(); // only this line when included with script tag</script></body></html>
+                        ';' + 'o' + '&' + '#' + '1' + '0' + '7' + ';' + '&' + '#' + '4' + '6' + ';' + 'c' + 'o' + 'm' + '<' + '/' + 'a' + '>');</script><noscript>Turn on JavaScript to see my email</noscript></button></footer></main></body></html>
